--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>ContactController</servlet-name>
-		<url-pattern>/ContactController</url-pattern>
+		<url-pattern>/contact</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
